--- a/wechat/src/main/webapp/xcview/css/school_play.css
+++ b/wechat/src/main/webapp/xcview/css/school_play.css
@@ -871,3 +871,198 @@ color: white;
 .little_comment{
 	padding-bottom: 0.2rem;
 }
+
+
+/*师承课程提示开始*/
+.learn_tips{
+	width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    display: none;
+}
+.learn_tips_bg{
+	position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    z-index: 999999991;
+    top: 0;
+    left: 0;
+}
+.learn_tips_main{
+	width: 5.4rem;
+    height: 3.27rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -1.635rem;
+    margin-left: -2.7rem;
+    background: #f4f4f4;
+    z-index: 999999999;
+    border-radius: 6px;
+}
+.learn_tips_close{
+	font-size: 0.4rem;
+    color: #999;
+    text-align: right;
+    padding-right: 0.2rem;
+    height: 0.5rem;
+}
+.learn_tips_title{
+	font-size: 0.28rem;
+	color: #333333;
+	text-align: center;
+}
+.learn_tips_cen{
+	width: 4.36rem;
+	font-size: 0.28rem;
+	color: #333333;
+	margin: 0 auto;
+	margin-bottom: 0.3rem;
+}
+.learn_tips_submit{
+	width: 2.9rem;
+	height: 0.72rem;
+	line-height: 0.72rem;
+	font-size: 0.3rem;
+	color: #FFFFFF;
+	text-align: center;
+	margin: 0 auto;
+	background: #00BC12;
+	border-radius: 8px;
+}
+
+/*审核中*/
+.learn_tips_audit{
+	width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    display: none;
+}
+.learn_tips_audit_bg{
+	position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    z-index: 999999991;
+    top: 0;
+    left: 0;
+}
+.learn_tips_audit_main{
+	width: 5.4rem;
+    height: 3.27rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -1.635rem;
+    margin-left: -2.7rem;
+    background: #f4f4f4;
+    z-index: 999999999;
+    border-radius: 6px;
+}
+.learn_tips_audit_close{
+	font-size: 0.4rem;
+    color: #999;
+    text-align: right;
+    padding-right: 0.2rem;
+    height: 0.5rem;
+}
+.learn_tips_audit_title{
+	font-size: 0.28rem;
+	color: #333333;
+	text-align: center;
+}
+.learn_tips_audit_cen{
+	width: 4.36rem;
+	font-size: 0.28rem;
+	color: #333333;
+	margin: 0 auto;
+	margin-bottom: 0.3rem;
+}
+.learn_tips_audit_submit{
+	width: 2.9rem;
+	height: 0.72rem;
+	line-height: 0.72rem;
+	font-size: 0.3rem;
+	color: #FFFFFF;
+	text-align: center;
+	margin: 0 auto;
+	background: #DEDEDE;
+	border-radius: 8px;
+}
+
+/*部分*/
+.learn_tips_part{
+	width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    display: none;
+}
+.learn_tips_part_bg{
+	position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    z-index: 999999991;
+    top: 0;
+    left: 0;
+}
+.learn_tips_part_main{
+	width: 5.4rem;
+    height: 2.73rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -1.635rem;
+    margin-left: -2.7rem;
+    background: #f4f4f4;
+    z-index: 999999999;
+    border-radius: 6px;
+}
+.learn_tips_part_close{
+	font-size: 0.4rem;
+    color: #999;
+    text-align: right;
+    padding-right: 0.2rem;
+    height: 0.5rem;
+}
+.learn_tips_part_title{
+	font-size: 0.32rem;
+    color: #333333;
+    text-align: center;
+    margin-top: 0.4rem;
+    margin-bottom: 0.2rem;
+    font-weight: 800;
+}
+.learn_tips_part_cen{
+	/*width: 4.36rem;*/
+	text-align: center;
+	font-size: 0.28rem;
+	color: #333333;
+	margin: 0 auto;
+	margin-bottom: 0.3rem;
+}
+.learn_tips_part_submit{
+	height: 0.85rem;
+    line-height: 0.85rem;
+    font-size: 0.3rem;
+    color: #00bc12;
+    text-align: center;
+    margin: 0 auto;
+    border-top: 1px solid #D8DDE6;
+    margin-top: 0.2rem;
+    /*display: block !important;*/
+}
+/*师承课程提示结束*/
