--- a/wechat/src/main/webapp/xcview/css/school_play.css
+++ b/wechat/src/main/webapp/xcview/css/school_play.css
@@ -916,6 +916,7 @@ color: white;
 	font-size: 0.28rem;
 	color: #333333;
 	text-align: center;
+	margin-bottom: .2rem;
 }
 .learn_tips_cen{
 	width: 4.36rem;
@@ -979,6 +980,7 @@ color: white;
 	font-size: 0.28rem;
 	color: #333333;
 	text-align: center;
+	margin-bottom: .2rem;
 }
 .learn_tips_audit_cen{
 	width: 4.36rem;
