--- a/wechat/src/main/webapp/xcview/html/invitation_card/css/createImg.css
+++ b/wechat/src/main/webapp/xcview/html/invitation_card/css/createImg.css
@@ -105,7 +105,7 @@ header {
     height: 8.89rem;
     position: absolute;
     left: 50%;
-    top: 1.5rem;
+    top: 1.48rem;
     transform: translate(-50%,0);
     box-sizing: border-box;
     font-size: .3rem;
@@ -173,7 +173,7 @@ header {
 }
 
 .imgBoxWrapper3 .er{
-    float: right;
+    /*float: right;*/
 }
 .imgBoxWrapper{
     display: none;
@@ -312,9 +312,9 @@ header {
 }
 .imgBoxWrapper2 .img_cont .des .title{
     width: 4.2rem;
-    height: .68rem;
+    height: .64rem;
     margin: 0 auto;
-    font-size: .2rem;
+    font-size: .22rem;
     color: #333333;
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -341,10 +341,25 @@ header {
     margin-bottom: 0.22rem;
 }
 .imgBoxWrapper2 .er{
-    width: 0.8rem;
+    width: 4.2rem;
     height: 0.8rem;
     margin-bottom: .28rem;
     padding: 0;
+}
+.imgBoxWrapper2 .er img{
+    width: 0.8rem;
+}
+.imgBoxWrapper2 .er p{
+    width: 4.2rem;
+    height: .56rem;
+    margin: 0 auto;
+    font-size: .2rem;
+    color: #666;
+    margin-top: .18rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
 }
 .imgBoxWrapper2 .img_cont .site{
     width: 4.2rem;
@@ -357,4 +372,178 @@ header {
 .imgBoxWrapper .img_cont{
     width: 5rem;
     height: 8.89rem;
+}
+
+/*图3*/
+.sub_imgBoxWrapper3 .logo{
+
+}
+.imgBoxWrapper3 .avatar{
+    color: #fff;
+    margin: 0.45rem 0;
+}
+.imgBoxWrapper3 .mainIma1{
+    width: 4.4rem;
+    height: 2.47rem;
+    margin: 0 auto;
+    margin-bottom: 0.2rem;
+}
+.imgBoxWrapper3 .mainIma1 img{
+    width: 4.4rem;
+    height: 2.47rem;
+    border-radius: 8px;
+}
+.imgBoxWrapper3 .des{
+    width: 4.4rem;
+    margin: 0 auto;
+    font-size: .2rem;
+    color: #333333;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    /* height: 0.4rem; */
+    display: -webkit-box;
+    margin-bottom: 0.2rem;
+}
+.imgBoxWrapper3 .site{
+    width: 4.4rem;
+    margin: 0 auto;
+    font-size: .2rem;
+    color: #818C8B;
+}
+.imgBoxWrapper3 .site .div{
+    font-size: .2rem;
+    color: #D1B280;
+    margin-bottom: 0.06rem;
+}
+.imgBoxWrapper3 .specific_address{
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    display: -webkit-box;
+    margin-bottom: 0.45rem;
+}
+.imgBoxWrapper3 .information{
+    width: 4.4rem;
+    height: 1.2rem;
+    margin: 0 auto;
+    border: 1px solid #D1B280;
+    margin-top: 0.45rem;
+    border-radius: 4px;
+}
+.imgBoxWrapper3 .avatars{
+    width: 2.5rem;
+    margin: 0 auto;
+    margin-top: -0.2rem;
+    background: #ffffff;
+    overflow: hidden;
+    padding: 0 0rem 0 0.1rem;
+}
+.imgBoxWrapper3 .avatars img{
+    width: 0.4rem;
+    height: 0.4rem;
+    border-radius: 100px;
+    border: 1px solid #D1B280;
+    margin-right: 0.1rem;
+    float: left;
+}
+.imgBoxWrapper3 .avatars .p1{
+    width: 1.8rem;
+    font-size: 0.2rem;
+    color: #333333;
+    margin-top: 0.18rem;
+    display: inline;
+    font-size: 0.2rem;
+    color: #333333;
+    margin-top: 0.05rem;
+    float: left;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.imgBoxWrapper3 .er{
+    width: 4.2rem;
+    margin: 0 auto;
+}
+.imgBoxWrapper3 .er{
+    width: 4rem;
+    /* float: left; */
+    font-size: 0.2rem;
+    color: #818C8B;
+    margin: 0 auto;
+    margin-top: 0.1rem;
+}
+.imgBoxWrapper3 .er img{
+    width: 0.6rem;
+    margin-top: -0.15rem;
+}
+.imgBoxWrapper3 .er p{
+    text-align: left;
+    width: 3.4rem;
+    float: left;
+}
+
+/*图4*/
+.imgBoxWrapper4 .avatar img{
+    margin-top: 0.48rem;
+}
+.imgBoxWrapper4 .img_cont .p1{
+    font-size: .22rem;
+    color: #231916;
+    text-align: center;
+    margin-top: 0.2rem;
+    margin-bottom: 0.1rem;
+}
+.imgBoxWrapper4 .img_cont .p2{
+    font-size: .2rem;
+    color: #C08979;
+    text-align: center;
+    margin-bottom: 0.16rem;
+}
+.imgBoxWrapper4 .mainIma1{
+    width: 3.9rem;
+    height: 2.16rem;
+    margin: 0 auto;
+    border: 2px solid #000;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-bottom: 0.384rem;
+}
+.imgBoxWrapper4 .mainIma1 img{
+    width: 3.9rem;
+    height: 2.16rem;
+}
+.imgBoxWrapper4 .des .title{
+    width: 3.96rem;
+    font-size: .2rem;
+    color: #231916;
+    margin: 0 auto;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+.imgBoxWrapper4 .site{
+    font-size: .2rem;
+    color: #C08979;
+    width: 3.97rem;
+    margin: 0 auto;
+    margin-top: .2rem;
+    margin-bottom: .2rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+.imgBoxWrapper4 .er{
+    width: 100%;
+    text-align: center;
+    font-size: .2rem;
+    color: #231916;
+}
+.imgBoxWrapper4 .er img{
+    width: 1rem;
+}
+.imgBoxWrapper4 .er p{
+    margin-top: .2rem;
 }
