--- a/wechat/src/main/webapp/xcview/css/school_audio.css
+++ b/wechat/src/main/webapp/xcview/css/school_audio.css
@@ -802,7 +802,7 @@ color: #666666;
 	width: 100%;
     height: 1.3rem;
     background: #ffffff;
-    border: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
 }
 .check_main{
 	width: 6.98rem;
