修改BUG，医师认证富文本，银行卡提示，医馆认证信用码等

--- a/online-web/src/main/webapp/web/css/anchor/mymoney.css
+++ b/online-web/src/main/webapp/web/css/anchor/mymoney.css
@@ -450,7 +450,10 @@
 }
 .waring{
 	font-size: 14px;
-	color: #f40;
+    color: #FF4012;
+    text-indent: 20px;
+    background: url(../../images/icons/tanhao.png) no-repeat left center;
+    margin: 10px 0 0 90px;
 }
 #mymoney .content_add .addNewCard{
 	width: 92px;
