--- a/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
+++ b/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
@@ -232,3 +232,79 @@
 
 
 
+/*语音直播开始*/
+.voice_broadcast{
+    width: 100%;
+    background: #fff;
+    margin-bottom: 0.2rem;
+    margin-top: 0.2rem;
+}
+.voice_broadcast_title{
+    font-size: 0.32rem;
+    color: #333;
+    margin-left: 0.26rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.2rem;
+}
+.voice_broadcast_title img{
+    width: 0.15rem;
+    margin-right: 0.26rem;
+    float: right;
+    margin-top: 0.08rem;
+}
+.voice_broadcast_main{
+    width: 7rem;
+    margin: 0 auto; 
+    padding-bottom: 0.3rem;
+}
+.voice_broadcast_list{
+    width: 100%;
+    height: 1.2rem;
+    /*background: #ccc;*/
+    margin-bottom: 0.2rem;
+}
+.list_surface_plot{
+    width: 2.13rem;
+    height: 1.2rem;
+    float: left;
+    position: relative;
+}
+.list_surface_plot .surface_plot{
+    width: 2.13rem;
+    height: 1.2rem;
+    border-radius: 4px;
+}
+.identifying{
+    padding: 0rem 0.1rem;
+    color: #fff !important;
+    margin-top: -0.02rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #f97b49;
+    border-radius: 4px;
+    font-size: 0.24rem;
+}
+.voice_broadcast_center{
+    float: right;
+    /*margin-left: 0.33rem;*/
+    width: 4.52rem;
+}
+.voice_broadcast_center .title{
+    font-size: .28rem;
+    color: #333333;
+    margin-bottom: 0.1rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+.charge{
+    font-size: .22rem;
+    color: #999;
+}
+.charge span{
+    color: #F97B49;
+}
+
+/*语音直播结束*/
