--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -490,6 +490,136 @@ outline: none;
 	height: 100%;
 	display: block;
 }
+/*商品区域*/
+.shopping-wrap{
+	border-top: 1px solid #f0f0f0;
+    padding-top: 17px;
+    overflow: hidden;
+    margin-top: 20px;
+}
+.shopping-edit-box{
+	position: relative;
+}
+.shopping-edit-box img{
+	position: absolute;
+	top: 5px;
+	right: 0;
+	cursor: pointer;
+}
+.shopping-edit-box ul{
+	overflow: hidden;
+	border-bottom: 1px solid #f0f0f0;
+	margin: 0;
+}
+.shopping-edit-box ul li{
+	float: left;
+    margin-right: 30px;
+    padding-bottom: 15px;
+    border-bottom: 3px solid transparent;
+    color: #999999;
+    cursor: pointer;
+}
+.shopping-edit-box ul .active{
+	border-bottom: 3px solid #00bc12;
+    color: #333333;
+}
+
+.our-ratings{
+	padding-top: 20px;
+    overflow: hidden;
+    width: 895px;
+    margin: 0 auto;
+}
+.our-ratings img{
+	width: 23px;
+	vertical-align: text-bottom;
+	margin-right: 5px;
+	cursor: pointer;
+}
+.our-ratings .left-explain{
+	color: #666666;
+	margin-right: 20px;
+}
+.shopping-search-wrap{
+	padding-top: 20px;
+    overflow: hidden;
+    width: 895px;
+    margin: 0 auto;
+}
+.shopping-search-wrap .left-shopping{
+	    float: left;
+        margin: 7px 20px 0 0;
+    color: #666666;
+}
+.shopping-search-input{
+	 width: 176px;
+    height: 32px;
+    border: 1px solid #f0f0f0;
+    position: relative;
+}
+ .shopping-search-input img{
+ 	position: absolute;
+    right: 7px;
+    top: 3px;
+    cursor: pointer;
+ }  
+ .shopping-search-input input{
+ 	width: 140px;
+    height: 30px;
+    border: 0;
+    outline: none;
+    padding-left: 8px;
+ }
+ .search-ware-num{
+ 	padding-left: 13px;
+    margin: 20px 0;
+ }
+
+
+
+.shopping-list-wrap{
+	max-height: 606px;
+    overflow-y: auto;
+}
+.shopping-list-wrap table th{
+	background: #F0F0F0;
+    height: 38px;
+    text-align: center;
+}
+.shopping-list-wrap tr th:nth-child(1) {
+    width: 126px;
+}
+.shopping-list-wrap tr th:nth-child(2) {
+    width: 500px;
+}
+.shopping-list-wrap tr th:nth-child(3) {
+    width: 292px;
+}
+
+.shopping-list-wrap tr td{
+	padding: 10px;
+    color: #188EEE;
+    text-align: center;
+}
+
+.shopping-list-wrap tr td .shopping-fengmian{
+	    width: 106px;
+    height: 60px;
+}
+.shopping-list-wrap tr td .select-ware-img {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    border: 1px solid #bbb9b9;
+    margin: 0 auto;
+}
+.shopping-list-wrap tr td .select-ware-img img{
+	display: block;
+    width: 100%;
+    height: 100%;
+}
+    
+
 /*动态消息*/
 .main-list-news{
 	padding: 20px;
@@ -758,6 +888,40 @@ outline: none;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+/*商品*/
+.class-img-shopping{
+	width: 140px;
+	height: 140px;
+}
+.class-img-shopping img{
+	width: 100%;
+	height: 100%;
+}
+.class-right-text-shopping{
+	width: 748px;
+    margin-top: 20px;
+}
+.class-right-text-shopping h5{
+	margin: 0;
+    color: #333333;
+    font-size: 16px;
+}
+.class-right-text-shopping .shopping-price{
+	margin: 10px 0 0;
+    color: #999999;
+}  
+.class-right-text-shopping .shopping-price span{
+  	color: #F97B49;
+    margin-right: 5px;
+} 
+.class-right-text-shopping .shopping-recommend{
+	margin: 7px 0 0;
+	color: #666666;
+}
+.class-right-text-shopping .shopping-recommend img{
+	margin-top: -5px;
+	width: 128px;
 }
 /*时间/状态/删除/编辑内容/置顶*/
 .status-operation-wrap{
