--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -272,8 +272,9 @@ p{
     height: 0.088rem;
     position: absolute;
     top: 0.38rem;
-    left: 1.95rem;
+    /* left: 1.95rem; */
     display: block !important;
+    right: -.25rem;
 }
 .li_evaluate{
 	margin-right: 0 !important;
