--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -146,6 +146,10 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
     background-color: #fff;
     display: none;
 }
+.arrow_jt{
+	color: #d8d8d8;
+}
+/*健康好货*/
 .contentWrap .shopping_box{
 	width: 960px;
     display: block;
@@ -155,9 +159,48 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
     background-color: #fff;
     display: none;
 }
-.arrow_jt{
-	color: #d8d8d8;
+.shopping_box .shopping-top{
+	height: 60px;
+	line-height: 60px;
+    border-bottom: 1px solid #F0F0F0;
+    padding-left: 20px
 }
+.shopping_box .shopping-top span{
+	font-size: 16px;
+}
+.screening-conditions-wrap{
+	padding: 20px 0;
+}
+.screening-conditions-wrap .shopping-code {
+	margin: 0 0 20px;
+}
+.screening-conditions-wrap .shopping-code .left-tip{
+	width: 118px;
+	display: inline-block;
+	margin-right: 10px;
+	text-align: right;
+}
+.screening-conditions-wrap .shopping-code .input-code{
+	width: 180px;
+    height: 36px;
+    border: 1px solid #f0f0f0;
+	padding-left: 5px;
+    outline: none;
+
+}
+.screening-conditions-wrap .shopping-code .sales-volume{
+	width: 83px;
+    height: 36px;
+    border: 1px solid #f0f0f0;
+	padding-left: 5px;
+    outline: none;
+
+}
+
+
+
+
+
 .doctor_inf .picModal {
   cursor: pointer;
   position: absolute;
