提问添加点击查看更多。。修改主播页，中医师页面，无绑定状态下，点击加关注跳转完善信息页

--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1661,9 +1661,12 @@ p{
     padding: 0.3rem 0.26rem; 
     box-sizing: border-box;
     background: white;
-    overflow: hidden;
+    /*overflow: hidden;*/
     margin: 0 auto;
     margin-top: 0.2rem;
+}
+.wrap_vedio ul .li{
+	float: left;
 }
 .wrap_vedio .border {
     display: inline-block;
