学堂添加语音直播、语音直播详情页添加分享提示

--- a/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
+++ b/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
@@ -238,6 +238,7 @@
     background: #fff;
     margin-bottom: 0.2rem;
     margin-top: 0.2rem;
+    display: none;
 }
 .voice_broadcast_title{
     font-size: 0.32rem;
@@ -253,9 +254,21 @@
     margin-top: 0.08rem;
 }
 .voice_broadcast_main{
+    position: relative;
     width: 7rem;
     margin: 0 auto; 
     padding-bottom: 0.3rem;
+}
+.onClickA{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    display: block;
+    width: 7rem;
+    height: 1.12rem;
+    display: inline-table;
+    /*background: red;*/
 }
 .voice_broadcast_list{
     width: 100%;
