--- a/wechat/src/main/webapp/xcview/css/physician/voice_broadcast.css
+++ b/wechat/src/main/webapp/xcview/css/physician/voice_broadcast.css
@@ -743,4 +743,39 @@ body{
 
 }
 
-/*彈幕結束*/
+/*弹幕结束*/
+
+/*分享给的提示开始*/
+.weixin_ceng {
+    width: 100%;
+    height: 100%;
+    display: none; 
+}
+.weixin_ceng_bg {
+    width: 7.5rem;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    position: fixed;
+    left: 50%;
+    top: 0;
+    z-index: 999999999999999;
+    margin-left: -3.75rem;
+}
+.weixin_img {
+    position: fixed;
+    z-index: 99999999999;
+    top: 0rem;
+    left: 50%;
+    width: 7.5rem;
+    height: 100%;
+    margin-left: -3.75rem;
+}
+.weixin_img img {
+    position: absolute;
+    top: 0rem;
+    right: 0.26rem;
+    width: 3rem;
+    z-index: 99999999999;
+}
+/*分享给的提示结束*/
