修改学堂-推荐--收费语音直播跳转

--- a/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
+++ b/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
@@ -275,6 +275,7 @@
     height: 1.2rem;
     /*background: #ccc;*/
     margin-bottom: 0.2rem;
+    position: relative;
 }
 .list_surface_plot{
     width: 2.13rem;
