--- a/wechat/src/main/webapp/xcview/css/school_play.css
+++ b/wechat/src/main/webapp/xcview/css/school_play.css
@@ -49,7 +49,6 @@ textarea::-webkit-input-placeholder {
 .header p{
 	font-size: 0.36rem;
 	color: #333333;
-	
 }
 .header_news{
 	width: 0.42rem;
@@ -79,7 +78,6 @@ textarea::-webkit-input-placeholder {
 .play_video{
 	width: 100%;
 	height: 4.24rem;
-	/*background: url(../images/xianxia_03.jpg) no-repeat center;*/
 	background-size:cover;
 	position: relative;
 }
@@ -95,17 +93,20 @@ textarea::-webkit-input-placeholder {
 }
 .speak_title{
 	font-size: 0.32rem;
-color: #333333;
-padding-bottom: 0.17rem;
+    color: #333333;
+    margin-bottom: 0.17rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
 }
-
 .wrap_grade{
 	height: 0.33rem;
 }
 .speak-text{
 	font-size: 0.26rem;
-color: #666666;
-padding-bottom: 0.17rem;
+	color: #666666;
+	padding-bottom: 0.17rem;
 }
 .grade_pic{
 	margin-top: 0.05rem;
@@ -120,7 +121,7 @@ padding-bottom: 0.17rem;
     display: inline-block;
 }
 .grade_pic .jiantou{
-	    width: 0.14rem;
+	width: 0.14rem;
     vertical-align: top;
     margin-top: 0.05rem;
     margin-left: -0.03rem;
@@ -173,17 +174,15 @@ padding-bottom: 0.17rem;
 	float: left;
 	margin-top: -0.02rem;
 	margin-left: 0.1rem;
-	/*padding-right: 0.26rem;*/
     box-sizing: border-box;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 .playTime li p{
-	    border: 1px solid #F97B49;
-border-radius: 3px;
+	border: 1px solid #F97B49;
+	border-radius: 3px;
     font-size: 0.22rem;
-    /*padding: 0rem 0.1rem;*/
     color: #F97B49 !important;
     display: inline-block;
     margin-left: 0.1rem;
@@ -213,12 +212,9 @@ border-radius: 3px;
 .my_synopsis{
 	width: 2.36rem;
 	height: 0.43rem;
-	/*margin: 0 auto;*/
-
 }
 .my_synopsis ul li{
 	float: left;
-	
 }
 .my_synopsis ul .border{
 	width: 0.06rem;
@@ -234,9 +230,6 @@ border-radius: 3px;
 	background: #D8DDE6;
 	margin-top: 0.2rem;
 }
-/* .my_synopsis ul li:nth-child(2){
-	margin-left: 0.3rem;
-} */
 /*内容*/
 .wrap{
 	width: 100%;
@@ -250,13 +243,12 @@ border-radius: 3px;
 	min-height: 2rem;
 	padding-bottom: 0.2rem;
 	word-wrap:break-word; 
-word-break:break-all; 
+	word-break:break-all; 
 }
 .wrap p{
 	line-height: 0.42rem !important;
 }
 .wrap p img{
-	/*width: 100%;*/
 	max-width: 7rem;
 }
 .zhezhao{
@@ -275,7 +267,7 @@ word-break:break-all;
 	height: 2rem;
 }
 .btn{
-	    text-align: center;
+	text-align: center;
     background: white;
 	padding-bottom: 0.2rem;
 	border-bottom: 0.01rem solid #D8DDE6;
@@ -294,9 +286,7 @@ word-break:break-all;
 	display: none;
 	text-align: center;
     line-height: 1.8rem;
-    /*border-bottom: 0.01rem solid #D8DDE6;*/
     color: #a5a5a5;
-	
 }
 .no_data1{
 	display: none;
@@ -313,7 +303,6 @@ word-break:break-all;
 }
 .main_speak{
 	width: 2.64rem;
-	/*margin: 0 auto;*/
 	overflow: hidden;
 	padding-top: 0.2rem;
 }
@@ -326,23 +315,8 @@ word-break:break-all;
     border-radius: 100px;
 }
 .main_speak .main_speak .size{
-	/* float: left;
-	width: 0.6rem;
-	height: 1px;
-	background: #D8DDE6; */
 	margin-top: 0.2rem;
 }
-/*.main_speak p:nth-child(2){
-	float: left;
-	margin-left: 0.3rem;
-}
-.main_speak p:nth-child(3){
-	float: right;
-	width: 0.6rem;
-	height: 1px;
-	background: #D8DDE6;
-	margin-top: 0.2rem;
-}*/
 /*内容*/
 .wrap1{
 	width: 100%;
@@ -356,10 +330,9 @@ word-break:break-all;
 	min-height:2rem;
 	padding-bottom: 0.2rem;
 	word-wrap:break-word; 
-word-break:break-all; 
+	word-break:break-all; 
 }
 .wrap1 p img{
-	/*width: 100%;*/
 	max-width: 7rem;
 }
 .wrap1 p{
@@ -381,7 +354,7 @@ word-break:break-all;
 	height: 2rem;
 }
 .btn1{
-	    text-align: center;
+	text-align: center;
     background: white;
 	padding-bottom: 0.2rem;
 	border-bottom: 0.01rem solid #D8DDE6;
@@ -397,26 +370,18 @@ word-break:break-all;
 	margin-left: 0.1rem;
 }
 /*详情结束*/
-
-
-
-
-
-
 /*评论*/
 .wrap_comment_title{
 	width: 100%;
 	background: white;
-	    overflow: hidden;
+	overflow: hidden;
     margin-top: 0.2rem;
     padding: 0.3rem 0 0.1rem 0.26rem;
 	box-sizing: border-box;
-    
 }
 .wrap_comment_title p{
 	float: left;
 	font-size: 0.32rem;
-
 }
 .wrap_comment_title .border{
 	width: 0.06rem;
@@ -429,24 +394,20 @@ word-break:break-all;
 }
 .wrap_comment_title span{
 	float: right;
-margin-top: 0.1rem;
+	margin-top: 0.1rem;
     margin-right: 0.26rem;
-
 }
 .wrap_comment_title span img{
-
 	width: 0.15rem;
 	height: 0.25rem;
-
 }
 .wrap_people_comment{
 	width: 100%;
 	background: white;
 	overflow: hidden;
-	    border-bottom: 0.01rem solid #D8DDE6;
-	    padding-top: 0.2rem;
+    border-bottom: 0.01rem solid #D8DDE6;
+    padding-top: 0.2rem;
 }
-
 .wrap_all_returned .wrap_people_comment:nth-last-child(1){
 	border: 0;
 }
@@ -472,7 +433,6 @@ margin-top: 0.1rem;
 .user_text{
 	width: 5.85rem;
 	min-height: 0.98rem;
-
 	float: right;
 }
 .wrap_userName{
@@ -486,18 +446,15 @@ margin-top: 0.1rem;
 }
 .write_text{
 	font-size: 0.26rem;
-	/*padding-top: 0.16rem;*/
-word-wrap:break-word;
+	word-wrap:break-word;
 	clear: both;
 	
 }
 /*无评论时显示图片*/
 .quie_pic{
 	width: 100%;
-    /*height: 4rem;*/
     margin-bottom: 1.2rem;
     text-align: center;
-
     display: none;
     background: white;
     padding-bottom: 0.5rem;
@@ -510,7 +467,6 @@ word-wrap:break-word;
 	color: #BBBBBB;
 	font-size: 0.3rem;
     padding: 0.2rem 0;
-
 }
 .quie_pic span{
 	display: inline-block;
@@ -547,7 +503,7 @@ word-wrap:break-word;
     border-radius: 4px;
 }
 .returned_id{
-color: #666666;
+	color: #666666;
     padding-bottom: 0.1rem;
     font-size: 0.26rem;
 }
@@ -603,13 +559,13 @@ color: #666666;
     margin-left: -3.75rem;
 }
 .left_price{
-background: white;
-width: 50%;
-height: 100%;
-display: block;
-text-align: center;
-color: #333;
-border-top: 1px solid #D8DDE6;
+	background: white;
+	width: 50%;
+	height: 100%;
+	display: block;
+	text-align: center;
+	color: #333;
+	border-top: 1px solid #D8DDE6;
 }
 .left_price p span{
 	color: #F97B49;
@@ -617,10 +573,10 @@ border-top: 1px solid #D8DDE6;
 .right_priceBtn{
 	background: #00BC12;
 	width: 50%;
-height: 100%;
-display: block;
-text-align: center;
-color: white;
+	height: 100%;
+	display: block;
+	text-align: center;
+	color: white;
 }
 
 
