--- a/wechat/src/main/webapp/xcview/css/physician/voice_broadcast.css
+++ b/wechat/src/main/webapp/xcview/css/physician/voice_broadcast.css
@@ -64,6 +64,7 @@ body{
     width: 100%;
     height: 100%;
     background: red;
+    display: none;
 }
 .surface_plot_img{
     width: 100%;
@@ -77,7 +78,7 @@ body{
     width: 100%;
     height: 100%;
     background: #000;
-    opacity: 0.3;
+    opacity: 0.5;
     position: absolute;
     top: 0;
 }
@@ -103,9 +104,28 @@ body{
     width: 100%;
     color: #FFFFFF;
     text-align: center;
+    font-size: .32rem;
 }
 #box1{
     width: 100%;
+    color: #FFFFFF;
+    text-align: center;
+}
+.courseware{
+    width: 7.5rem;
+    height: 4.24rem;
+    display: none;
+}
+.courseware_img{
+    width: 100%;
+    height: 4.24rem;
+    display: none;
+}
+.courseware_hint{
+    width: 100%;
+    height: 4.24rem;
+    line-height: 4.24rem;
+    font-size: .32rem;
     color: #FFFFFF;
     text-align: center;
 }
