--- a/wechat/src/main/webapp/xcview/css/shop/shop-comment.css
+++ b/wechat/src/main/webapp/xcview/css/shop/shop-comment.css
@@ -3,6 +3,9 @@
 .y{float: right;}
 .wp{max-width: 7.5rem; margin: 0 auto;}
 p,ul{margin: 0;}
+html,body{
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /*iphone点击隐藏默认出现背景*/
+}
 body{
 	font-size: 0.24rem;
 	color: #999999;
