--- a/wechat/src/main/webapp/xcview/css/shop/shop-commentary.css
+++ b/wechat/src/main/webapp/xcview/css/shop/shop-commentary.css
@@ -11,6 +11,7 @@
 	line-height: 0.88rem;
 	position: fixed;
 	top: 0;
+	z-index: 100;
 }
 .header .return-img{
 	width: 0.24rem;
@@ -91,6 +92,7 @@
     resize: none;
     outline: none;
     border: 0;   
+    font-size: 0.28rem;
 }
 /*图片上传*/
 .upload-picture-wrap {
@@ -139,4 +141,33 @@
 }
 .upload-picture-wrap .save-pic .btn-upload p{
 	margin-top: 0.9rem;
+}
+/*卖家服务,物流服务*/
+.seller-logistics{
+	overflow: hidden;
+	margin-bottom: 0.2rem;
+}
+.seller-wrap{
+	overflow: hidden;
+    padding: 0.2rem 0.25rem;
+    background: white;
+    font-size: 0.28rem;
+    
+}
+.seller-wrap p{
+	float: left;
+    margin: 0.08rem 0.3rem 0 0;
+
+}
+
+    
+.seller-wrap .select-impress img{
+	width: 0.5rem;
+	float: left;
+	margin-right: 0.15rem;
+}
+.seller-wrap .select-impress span{
+	margin-left: 0.15rem;
+	float:left;
+	margin-top: 0.05rem;
 }
